--- a/Sesion2_Bloque1_Estructuras_Control_Funciones_BigData.ipynb
+++ b/Sesion2_Bloque1_Estructuras_Control_Funciones_BigData.ipynb
@@ -967,18 +967,18 @@
       "execution_count": null,
       "id": "99619ce1",
       "metadata": {
-        "id": "99619ce1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 176
         },
+        "id": "99619ce1",
         "outputId": "46dc408e-43f9-4c85-c3e4-612e153a876d"
       },
       "outputs": [
         {
-          "output_type": "error",
           "ename": "NameError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -1514,16 +1514,16 @@
       "execution_count": null,
       "id": "80770964",
       "metadata": {
-        "id": "80770964",
-        "outputId": "c0050556-b9b2-487d-bac3-7f24821e306a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "80770964",
+        "outputId": "c0050556-b9b2-487d-bac3-7f24821e306a"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "<class 'dict'>\n",
             "{'Temp_Entrada': 90, 'Temp_Salida': 100, 'Temp_Aire': 110}\n"
@@ -1659,18 +1659,18 @@
       "execution_count": null,
       "id": "8b4b3e95",
       "metadata": {
-        "id": "8b4b3e95",
-        "outputId": "773335e8-d5f9-43ba-ccbf-3cf165b03376",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 166
-        }
+        },
+        "id": "8b4b3e95",
+        "outputId": "773335e8-d5f9-43ba-ccbf-3cf165b03376"
       },
       "outputs": [
         {
-          "output_type": "error",
           "ename": "NameError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
@@ -2065,11 +2065,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
+      "id": "G3fq88HK6gFB",
       "metadata": {
         "id": "G3fq88HK6gFB"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{10, 50, 100, 20}\n",
+            "{100, 8, 50, 888, 88}\n",
+            "Unión\n",
+            "{100, 8, 10, 50, 20, 888, 88}\n",
+            "Intersección\n",
+            "{50, 100}\n",
+            "Diferencia\n",
+            "{10, 20}\n"
+          ]
+        }
+      ],
       "source": [
         "set1 = {10, 20, 50, 100}\n",
         "set2 = set([100, 50, 8, 88, 888, 100, 100, 100])  # definir un set a partir de una lista con elementos duplicados\n",
@@ -2087,22 +2103,30 @@
         "# diferencia\n",
         "print(\"Diferencia\")\n",
         "print(set1 - set2)"
-      ],
-      "id": "G3fq88HK6gFB"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
+      "id": "6zO_Olru6gFC",
       "metadata": {
         "id": "6zO_Olru6gFC"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "False\n",
+            "True\n"
+          ]
+        }
+      ],
       "source": [
         "# Membership testing\n",
         "print(888 in set1)\n",
         "print(888 in set2)\n"
-      ],
-      "id": "6zO_Olru6gFC"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2121,15 +2145,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "6406954d",
       "metadata": {
         "id": "6406954d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "20\n",
+            "Centro se encuentra en las claves del diccionario\n",
+            "Big Data\n",
+            "<class 'str'>\n",
+            "8\n",
+            "{'22', '21', '20'}\n",
+            "3\n"
+          ]
+        }
+      ],
       "source": [
         "## Ejercicio 2.2\n",
-        "\n"
+        "\n",
+        "dic_ejemplo = {'Alumnos': [\"Carlos\", \"Ana\", \"Daniela\", \"Martín\"],\n",
+        "'Curso': \"Big Data\",\n",
+        "'Edad': ('22', '21', '20', '22'),\n",
+        "'Presencial': True,\n",
+        "'Centro': \"Universidad San Pablo CEU\"\n",
+        "}\n",
+        "\n",
+        "# 2.2.1\n",
+        "print(dic_ejemplo['Edad'][2])\n",
+        "\n",
+        "#2.2.2\n",
+        "if ('Centro' in dic_ejemplo):\n",
+        "  print(\"Centro se encuentra en las claves del diccionario\")\n",
+        "else:\n",
+        "  print(\"Centro no se encuentra en las claves del diccionario\")\n",
+        "\n",
+        "#2.2.3\n",
+        "valorCurso=dic_ejemplo['Curso']\n",
+        "print(valorCurso)\n",
+        "print(type(valorCurso))\n",
+        "print(len(valorCurso))\n",
+        "\n",
+        "#2.2.4\n",
+        "set_edades = set(dic_ejemplo['Edad'])\n",
+        "print(set_edades)\n",
+        "print(len(set_edades))\n"
       ]
     },
     {
@@ -2137,16 +2201,16 @@
       "execution_count": null,
       "id": "38861c7b",
       "metadata": {
-        "id": "38861c7b",
-        "outputId": "407f2b5e-0cc6-4ece-a152-521f68957b38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "38861c7b",
+        "outputId": "407f2b5e-0cc6-4ece-a152-521f68957b38"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "20\n"
           ]
@@ -2169,16 +2233,16 @@
       "execution_count": null,
       "id": "5fd0fd07",
       "metadata": {
-        "id": "5fd0fd07",
-        "outputId": "3fdf9c42-1d3e-4f9d-d158-0e4cf5c839d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5fd0fd07",
+        "outputId": "3fdf9c42-1d3e-4f9d-d158-0e4cf5c839d6"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Centro no existe entre las claves\n"
           ]
@@ -2203,16 +2267,16 @@
       "execution_count": null,
       "id": "17546036",
       "metadata": {
-        "id": "17546036",
-        "outputId": "d672afc4-4b6d-4aa3-b2ea-5cb7bec16584",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "17546036",
+        "outputId": "d672afc4-4b6d-4aa3-b2ea-5cb7bec16584"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Big Data\n",
             "<class 'str'>\n",
@@ -2237,17 +2301,18 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "AeVetHir6gFE",
       "metadata": {
-        "id": "AeVetHir6gFE",
-        "outputId": "3800f06c-d5e3-4c6b-e29b-9358e8768699",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AeVetHir6gFE",
+        "outputId": "3800f06c-d5e3-4c6b-e29b-9358e8768699"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Lista con numeros sin repetir {'20', '21', '22'}\n",
             "Lista con numeros  repetidos ('22', '21', '20', '22')\n",
@@ -2272,8 +2337,7 @@
         "print(\"Lista con numeros  repetidos\",setNumRepAlumnos)\n",
         "print(\"Longitud lista con edades no repetidas\",len(setNumAlumnos))\n",
         "print(\"Longitud lista con edades repetidas\",len(setNumRepAlumnos))"
-      ],
-      "id": "AeVetHir6gFE"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3206,7 +3270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "78665541",
       "metadata": {
         "id": "78665541"
@@ -3221,12 +3285,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "b8c5b089",
       "metadata": {
         "id": "b8c5b089"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "200"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "multiplica(10,20)"
       ]
@@ -3257,7 +3332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "f12fe679",
       "metadata": {
         "id": "f12fe679"
@@ -3280,36 +3355,72 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "acf13025",
       "metadata": {
         "id": "acf13025"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "multiplica() missing 2 required positional arguments: 'a' and 'b'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmultiplica\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+            "\u001b[0;31mTypeError\u001b[0m: multiplica() missing 2 required positional arguments: 'a' and 'b'"
+          ]
+        }
+      ],
       "source": [
         "multiplica()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "860f04b0",
       "metadata": {
         "id": "860f04b0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Help on function multiplica in module __main__:\n",
+            "\n",
+            "multiplica(a, b)\n",
+            "    Función para multiplicar dos valores de entrada.\n",
+            "    \n",
+            "    :param a: un valor númerico como uno de los dos factores\n",
+            "    :param b: un valor númerico como uno de los dos factores\n",
+            "    :return: Devuelve la multiplicación de \"a\" y \"b\"\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "help(multiplica)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "d01522d0",
       "metadata": {
         "id": "d01522d0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "50\n"
+          ]
+        }
+      ],
       "source": [
         "# La idea de incluir un \"return\" fundamentalmente es seguir trabajando con las salidas de las funciones\n",
         "c = multiplica(8,5)\n",
@@ -3578,6 +3689,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3.9.0 ('recomendadorVideos')",
       "language": "python",
@@ -3593,15 +3707,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.0"
+      "version": "3.9.6"
     },
     "vscode": {
       "interpreter": {
         "hash": "fd755ef5c364b0937fa7f305ca71365387f816473e8af8795860aa053b94a5ad"
       }
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
